compositor: more consistently map geometries to the pixel grid

While the renderer rounds output / viewport position and geometry separately,
the direct scanout code so far never snapped output coordinates to the scaled
coordinate grid of that output. That difference can in some cases result in
visible differences between rendering and direct scanout.
This commit aligns the direct scanout code to match the renderer.

BUG: 513277